Добавлен @Builder для User и UploadedFile, FileProcessingStatistics переделан в record, в методе getProcessingErrors сервиса FileProcessingServiceImpl конструкция .collect(Collectors.toList()) сокращена до toList().